# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  main.cpp
lib/: CMakeLists.txt  tests.cpp
